welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: '(' expected but identifier found.
  if aSmile{
     ^monkeyTrouble:11: error: illegal start of simple expression
} 
^